--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.1
   connectivity_plus: ^3.0.2
+  http: ^1.0.0
 
 dev_dependencies:
   flutter_test:
