--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_bloc: ^8.1.1
   connectivity_plus: ^3.0.2
   http: ^1.0.0
+  dio: ^5.1.2
+  pretty_dio_logger: ^1.3.1
 
 dev_dependencies:
   flutter_test:
