--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   http: ^1.0.0
   dio: ^5.1.2
   pretty_dio_logger: ^1.3.1
+  flex_color_scheme: ^7.1.2
 
 dev_dependencies:
   flutter_test:
