--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   dio: ^5.1.2
   pretty_dio_logger: ^1.3.1
   flex_color_scheme: ^7.1.2
+  go_router: ^7.1.1
+  equatable: ^2.0.5
+  formz: ^0.6.0
 
 dev_dependencies:
   flutter_test:
